--- a/src/normalize.css
+++ b/src/normalize.css
@@ -5,6 +5,9 @@
 	border: none;
     box-sizing: border-box;
 	/* border: 2px solid black; */
+
+
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 *,
@@ -30,7 +33,7 @@ aside, nav, footer, header, section, main {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-    font-size: inherit;
+    /* font-size: inherit; */
 	font-weight: inherit;
 }
 
