--- a/src/pages/Auth/SignUpClient/SignUpClient.module.css
+++ b/src/pages/Auth/SignUpClient/SignUpClient.module.css
@@ -21,6 +21,10 @@
             color: #333333;
         }
 
+        span:hover{
+            cursor: pointer;
+        }
+
         .span{
             text-decoration: underline;
             font-size: inherit;
@@ -32,7 +36,7 @@
         margin-top: 20px;
     }
 
-    button{
+    .button{
         background-color: #005675;
         opacity: 0.5;
         color: white;
