--- a/src/pages/Auth/SignUpClient/SignUpClient.module.css
+++ b/src/pages/Auth/SignUpClient/SignUpClient.module.css
@@ -55,3 +55,25 @@
         /* cursor: not-allowed; */
     }
 }
+
+.PhoneInput{
+    display: flex;
+    flex-direction: column;
+
+    label{
+        font-size: 10px;
+        margin-top: 15px;
+        color: #666666;
+    }
+
+    input{
+        outline: none;
+        border: 1px solid #66666659;
+        border-radius: 6px;
+        width: 400px;
+        height: 35px;
+        margin-top: 2px;
+        padding: 0px 5px;
+        font-size: 15px;
+    }
+}
