--- a/src/pages/Auth/SignInClient/SignInClient.module.css
+++ b/src/pages/Auth/SignInClient/SignInClient.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 500px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 100px;
     align-items: center;
     padding-bottom: 50px;
 
@@ -42,18 +42,15 @@
         }
     }
 
-    .h5{
-        margin-top: 20px;
-    }
-
     .button{
         background-color: var(--accent-color);
         opacity: 0.5;
         color: var(--main-color);
         border-radius: 5px;
+        width: 400px;
         height: 40px;
         padding: 0px 10px;
-        /* cursor: not-allowed; */
+        margin-top: 20px;
     }
 }
 
