--- a/src/pages/Auth/SignUpClient/SignUpClient.module.css
+++ b/src/pages/Auth/SignUpClient/SignUpClient.module.css
@@ -5,9 +5,10 @@
     margin: auto;
     margin-top: 100px;
     align-items: center;
+    padding-bottom: 50px;
 
     h1{
-        color: #333333;
+        color: var(--text-color);
     }
 
     .checkboxContainer{
@@ -20,14 +21,14 @@
 
     h5{
         margin-bottom: 20px;
-        color: #333333;
+        color: var(--text-color);
         width: 350px;
         text-align: center;
 
         span{
             text-decoration: underline;
             font-size: inherit;
-            color: #333333;
+            color: var(--text-color);
         }
 
         span:hover{
@@ -46,38 +47,16 @@
     }
 
     .button{
-        background-color: #005675;
+        background-color: var(--accent-color);
         opacity: 0.5;
-        color: white;
+        color: var(--main-color);
         border-radius: 5px;
         height: 40px;
         padding: 0px 10px;
-        /* cursor: not-allowed; */
     }
 }
 
-.PhoneInput{
-    display: flex;
-    flex-direction: column;
-
-    label{
-        font-size: 10px;
-        margin-top: 15px;
-        color: #666666;
-    }
-
-    input{
-        outline: none;
-        border: 1px solid #66666659;
-        border-radius: 6px;
-        width: 400px;
-        height: 35px;
-        margin-top: 2px;
-        padding: 0px 5px;
-        font-size: 15px;
-    }
-}
-
-p{
+.p{
+    font-size: 12px;
     color: red;
 }
