--- a/src/pages/Auth/SignUpSeller/SignUpSeller.module.css
+++ b/src/pages/Auth/SignUpSeller/SignUpSeller.module.css
@@ -51,7 +51,8 @@
         opacity: 0.5;
         color: var(--main-color);
         border-radius: 5px;
-        height: 40px;
+        height: 35px;
+        width: 400px;
         padding: 0px 10px;
         /* cursor: not-allowed; */
     }
