--- a/src/normalize.css
+++ b/src/normalize.css
@@ -114,3 +114,11 @@ legend {
 	background-color: var(--main-color);
 	height: 100vh;
 } */
+
+/* overflow: auto;
+scrollbar-width: none;
+-ms-overflow-style: none;
+
+.homeContainer::-webkit-scrollbar{
+    display: none;
+} */
