--- a/src/pages/SellerProducts/SellerProducts.module.css
+++ b/src/pages/SellerProducts/SellerProducts.module.css
@@ -140,5 +140,29 @@
   overflow: auto;
   position: absolute;
   justify-content: center;
- 
+  flex-direction: column;
+  margin-top: 80px;
+}
+
+.main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.button1{
+  background-color: var(--accent-color);
+  opacity: 0.5;
+  color: var(--main-color);
+  border-radius: 5px;
+  height: 30px;
+  width: 120px;
+  padding: 0px 10px;
+  font-size: 12px;
+  margin: 30px 0px;
+}
+
+.multiContainer{
+  width: 400px;
 }
