--- a/src/components/FormInput/BasicInput/BasicInput.module.css
+++ b/src/components/FormInput/BasicInput/BasicInput.module.css
@@ -6,6 +6,7 @@
         font-size: 12px;
         margin-top: 15px;
         color: var(--form-text-color);
+        cursor: default;
     }
 
     input{
