--- a/src/components/MultiSelectDropdown/MultiSelectDropdown.module.css
+++ b/src/components/MultiSelectDropdown/MultiSelectDropdown.module.css
@@ -1,3 +1,6 @@
-.multi{
+.multiContainer{
     width: 400px;
+    border: 1px solid var(--form-input-color);
+    border-radius: 6px;
+    padding-left: 10px;
 }
