--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
 .header{
     display: flex;
     flex-direction: column;
-    max-width: 950px;
+    max-width: 1440px;
     height: 80px;
     margin: auto;
 }
@@ -25,40 +25,55 @@
     display: flex;
     font-size: 12px;
     background-color: var(--header-accent-color);
-    margin: 7px;
+    margin: 6px 12px 0px 0px;
     padding: 2px 4px;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .headerMain{
+    padding: 0px 6px;
     display: flex;
     align-items: start;
-    justify-content: end;
+    justify-content: center;
     width:  100%;
     height: 54px;
 
-    .img{
-        width: 28px;
-        height: 28px;
-        margin-top: 14px;
+    .logoNameContainer{
+        display: flex;
+        height: 100%;
+
+
+
+        .imgLogo{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-width: 28px;
+            width: 28px;
+            height: 28px;
+            margin-top: 14px;
+        }
+    
+        .h1{
+            font-weight: bold;
+            color: var(--accent-color);
+            font-size: 38px;
+            margin: 0px 5px;
+            cursor: pointer;
+        }
     }
 
-    .h1{
-        font-weight: bold;
-        color: var(--accent-color);
-        font-size: 38px;
-        margin: 0px 5px;
-        cursor: pointer;
-    }
 
     .headerInputContainer{
         position: relative;
         margin: 0px 10px;
+        width: 900px;
+        min-width: 500px;
         
 
         .headerInput{
-            width: 550px;
+            width: 100%;
             height: 40px;
             background: var(--header-accent-color);
             border-radius: 5px;
@@ -66,8 +81,12 @@
             padding: 10px 40px;
         }
 
-        .img2{
+        .imgSearch{
+            display: flex;
+            align-items: center;
+            justify-content: center;
             height: 26px;
+            width: 26px;
             position: absolute;
             left: 5px;
             top: 16px;
@@ -83,32 +102,35 @@
             color: var(--main-color);
             border-radius: 5px;
             /* background: url(../../../public/icons/catalog.svg) 0 0 no-repeat; */
+        }
+    }
 
-            .img3{
+    .headerButtonsContainer{
+        display: flex;
+        height: 100%;
+
+        .headerButton{
+            margin-top: 10px;
+            border-radius: 5px;
+            min-width: 40px;
+            width: 40px;
+            height: 40px;
+            background-color: var(--header-accent-color);
+            position: relative;
+            margin-right: 5px;
+            margin-left: 5px;
+    
+            .img{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 30px;
+                height: 30px;
                 position: absolute;
-                top: 1px;
-                left: 0px;
-                width: 28px;
+                left: 5px;
+                bottom: 5px;
             }
         }
     }
 
-    .headerButton{
-        margin-top: 10px;
-        border-radius: 5px;
-        width: 40px;
-        height: 40px;
-        background-color: var(--header-accent-color);
-        position: relative;
-        margin-right: 5px;
-        margin-left: 5px;
-
-        img{
-            width: 30px;
-            height: 30px;
-            position: absolute;
-            left: 5px;
-            bottom: 5px;
-        }
-    }
 }
