--- a/src/normalize.css
+++ b/src/normalize.css
@@ -123,7 +123,9 @@ legend {
 	/* colors */
 	--background-color: #f3f3f3;
 	--main-color: #ffffff;
-	--accent-color: #005675;
+	/* --accent-color: #005675; */
+	/* --accent-color: #FF5900; */
+	--accent-color: #00A876;
 	/* --accent-color: #e48100; */
 	/* --accent-color: #3a9b57; */
 	--header-accent-color: #f0f2f5;
@@ -175,3 +177,7 @@ scrollbar-width: none;
 .homeContainer::-webkit-scrollbar{
     display: none;
 } */
+
+svg, path, rect{
+	fill: var(--accent-color);
+}
