--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,20 +1,26 @@
 .homeContainer{
-    display: flex;
-    align-items: start ;
     background-color: var(--main-color);
-    max-width: 950px;
+    max-width: 1440px;
     margin: auto;
     margin-top: 50px;
     border-radius: 25px 25px 0px 0px;
     height: calc(100vh - 130px);
+}
+
+.homeContent{
+    display: flex;
+    align-items: start ;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
     overflow: auto;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    padding: 10px;
-    flex-wrap: wrap;
-    gap: 43px;
+    padding: 20px;
+    gap: 40px;
+    max-height: calc(100vh - 130px);
 }
 
-.homeContainer::-webkit-scrollbar{
+.homeContent::-webkit-scrollbar{
     display: none;
 }
