--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -2,7 +2,7 @@
     /* padding: 50px; */
     display: flex;
     min-width: 900px;
-    width: 1440px;
+    max-width: 1440px;
     margin: auto;
     margin-top: 50px;
     height: calc(100vh - 130px);
@@ -31,7 +31,8 @@
         -ms-overflow-style: none;
         gap: 10px;
         height: auto;
-        MAX-height: calc(100% - 50px);
+        max-height: calc(100% - 50px);
+        padding: 10px;
     }
     
     .cardContainer::-webkit-scrollbar{
