--- a/src/components/Card/CardCart/CardCart.module.css
+++ b/src/components/Card/CardCart/CardCart.module.css
@@ -11,9 +11,11 @@
   /* flex-direction: column; */
   align-items: center;
   gap: 15px;
+  max-width: 100%;
 }
 
 .imgContainer {
+  min-width: 120px;
   width: 120px;
   height: 120px;
   background-color: var(--background-color);
@@ -26,6 +28,7 @@
 }
 
 .nameContainer {
+  min-width: 100px;
   width: 250px;
   height: 120px;
 }
