--- a/src/components/Card/CardProduct/CardProduct.module.css
+++ b/src/components/Card/CardProduct/CardProduct.module.css
@@ -69,9 +69,9 @@
   margin-bottom: 100px;
 }
 
-.button1{
+.button{
     background-color: var(--accent-color);
-    opacity: 0.5;
+    opacity: 1;
     color: var(--main-color);
     border-radius: 5px;
     height: 25px;
